--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
 </head>
 
 <body data-body-attrs>
+  <!-- Here we include a loader for SPA routes only -->
+  <% if (!uvue.ssr) { %>
+    <%= require('@/spa-loading.html') %>
+  <% } %>
   <ssr-body />
 </body>
 
